WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271847
Hover Text(a11y) is not working in Safari with Shadow Content
https://bugs.webkit.org/show_bug.cgi?id=271847
Summary
Hover Text(a11y) is not working in Safari with Shadow Content
Rupal
Reported
2024-03-28 13:57:19 PDT
Created
attachment 470646
[details]
screen recording Hover text functionality is not working inside shadow content (it works as expected outside of shadow content), although it functions correctly in Chrome. I have attached a sample HTML file for testing purposes and a brief screen recording. Steps to Turn on Hover Text On your Mac, choose Apple menu > System Settings, click Accessibility in the sidebar, then click Zoom on the right. (You may need to scroll down.) Turn on Hover Text. Reference link for Hover Text on macOS:
https://support.apple.com/guide/mac-help/use-hover-text-mchlb203bc78/mac
Attachments
screen recording
(17.49 MB, video/quicktime)
2024-03-28 13:57 PDT
,
Rupal
no flags
Details
HTML file for test
(635 bytes, text/html)
2024-03-28 13:58 PDT
,
Rupal
no flags
Details
Patch
(13.19 KB, patch)
2024-03-30 17:23 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(13.87 KB, patch)
2024-03-30 18:27 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(14.53 KB, patch)
2024-03-30 21:34 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-28 13:57:29 PDT
<
rdar://problem/125576324
>
Rupal
Comment 2
2024-03-28 13:58:59 PDT
Created
attachment 470647
[details]
HTML file for test
Tyler Wilcock
Comment 3
2024-03-30 17:23:57 PDT
Created
attachment 470683
[details]
Patch
Tyler Wilcock
Comment 4
2024-03-30 18:27:53 PDT
Created
attachment 470684
[details]
Patch
Tyler Wilcock
Comment 5
2024-03-30 21:34:37 PDT
Created
attachment 470686
[details]
Patch
EWS
Comment 6
2024-03-31 09:22:17 PDT
Committed
276865@main
(5d95f54a2edd): <
https://commits.webkit.org/276865@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470686
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug